[metadata]
name = pygame-controller
version = 0.2.0
author = Paul 'Footleg' Fretwell
author_email = drfootleg@gmail.com
description = Helper class to interface robots to game controllers on the Raspberry Pi.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Footleg/pygame-controller
project_urls =
    Bug Tracker = https://github.com/Footleg/pygame-controller/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = library
packages = find:
python_requires = >=3.6

[options.packages.find]
where = library